assets/css/custom.css
/* 
 * RAPIDS Site - Custom CSS for Jekyll Site
 * Utilizing https://purecss.io/grids/
*/

/* general */
body {
    font-family: 'Open Sans', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

section {
    position: relative;
}

pre {
    background-color: #efefef;
    padding: 1em;
    border-top: 2px solid #720dff;
}

code {
    word-break: break-word;
}

/* pure font overwrite */
.pure-g {
    font-family: 'Open Sans', sans-serif;
}

* {
    box-sizing: border-box;
}

a {
    color: #36c9dd;
    text-decoration: none;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

a:hover {
    color: #ffb500;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

h1,
h2,
h3,
h4 {
    color: #7306ff;
    font-weight: 300;
    letter-spacing: normal;
    font-family: sans-serif;
}

h1 {
    font-size: 3em;
    text-transform: uppercase;
    margin-bottom: 0.5em;
}

h2 {
    font-size: 1.5em;
    text-transform: uppercase;
    margin-bottom: 0em;
}

h3 {
    font-size: 1.3em;
    margin-bottom: 0em;
}


p, ol, ul {
    color: #666666;
    font-size: 1.1em;
    letter-spacing: normal;
    line-height: 1.55em;
    margin-top: 0em;
    margin-bottom: 1.6em;
}

strong {
    font-weight: 600;
}

.center-text {
    text-align: center;
}

.center {
    position: relative;
    width: 100%;
    left: 50%;
    transform: translate(-50%);
}

.half-image {
    width: 49%;
}

.third-image {
    width: 33%;
}

.half-image-center-single {
    position: relative;
    left: 50%;
    width: 50%;
    transform: translate(-50%);
}

.full-image-center {
    width: 100%;
    margin: 0 auto;
}

.half-image-center {
    position: relative;
    left: 50%;
    width: 50%;
    transform: translate(-75%);
}

.third-image-center {
    position: relative;
    left: 33%;
    width: 33%;
    transform: translate(-50%);
}

.flex-center {
    display: flex;
    justify-content: center;
    /* align horizontal */
    align-items: center;
    /* align vertical */
}


/* header and nav */

nav .nav-logo img {
    position: absolute;
    width: 5em;
    top: 1em;
}

nav ul {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-left: 5em;
    margin-top: 0;
    margin-bottom: 0;
    margin-right: 0;
    padding: 0;
    height: auto;
    -webkit-transition: height 0.5s ease;
    -moz-transition: height 0.5s ease;
    -ms-transition: height 0.5s ease;
    -o-transition: height 0.5s ease;
    transition: height 0.5s ease;
}

nav ul li {
    font-size: 1em;
    font-weight: 400;
    display: inline-block;
    padding: 0 0.5em;
    margin: 0;
}

nav ul li a {
    font-size: 0.95em;
    text-decoration: none;
    color: #FFF;
}

nav ul li a:hover {
    color: #a785e7;
}

nav ul li.active a {
    font-weight: 700;
}

nav .menu {
    display: none;
    color: white;
    position: absolute;
    right: 1em;
    top: 0;
    font-size: 2em;
}

#nav-fixed {
    z-index: 999;
    top: 0;
    position: fixed;
    width: 100%;
    min-height: 3em;
    padding: 0.8em 2em;
    background-color: #7306ff;
    box-shadow: 4px 1px 11px rgba(0, 0, 0, 0.20);
}

header {
    background: url(../images/header-bg.svg) top center no-repeat;
    min-height: 400px;
    background-size: cover;
}

.header-branding {
    text-align: center;
    padding-top: 6em;
}

.header-tagline {
    text-transform: inherit;
    font-size: 2em;
    text-align: center;
    font-weight: 400;
    color: #ffffff;
    margin-top: 0.25em;
    margin-bottom: 0.5em;
}

.header-logo {
    max-width: 244px;
    margin: 0 auto;
}

.header-short {
    background: url(../images/header-bg.svg) top center no-repeat;
    min-height: 230px;
    background-size: cover;  
}

/* layout */
.container-padding {
    width: 100%;
    max-width: 1280px;
    /* max width! */
    padding: 0 2em;
    margin: 0 auto;
}

.pure-u-md-1-3:nth-child(1) {
    padding-right: 1em;
}

.pure-u-md-1-3:nth-child(2) {
    padding-left: 1em;
    padding-right: 1em;
}

.pure-u-md-1-3:nth-child(3) {
    padding-left: 1em;
}

.pure-u-md-1-2:nth-child(1) {
    padding-right: 1em;
}

.pure-u-md-1-2:nth-child(2) {
    padding-left: 1em;
}

.slopecap-header {
    position: absolute;
    background-color: white;
    /* chrome behavior */
    z-index: auto;
    width: 100%;
    height: 20vw;
    margin-top: 4vw;
    -webkit-transform: skewY(-3deg);
    transform: skewY(-3deg);
    -webkit-box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.2);
    box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.2);
}

.slopecap-top-down {
    position: relative;
    /* chrome behavior */
    z-index: auto;
    width: 100%;
    height: 6vw;
    margin-top: -3vw;
    margin-bottom: -3vw;
    -webkit-transform: skewY(3deg);
    transform: skewY(3deg);
    -webkit-box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
    -moz-box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
    box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
}

.slopecap-top-up {
    position: relative;
    /* chrome behavior */
    z-index: auto;
    width: 100%;
    height: 6vw;
    margin-top: -3vw;
    margin-bottom: -3vw;
    -webkit-transform: skewY(-3deg);
    transform: skewY(-3deg);
    -webkit-box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
    -moz-box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
    box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);

}

.slopecap-bottom-up {
    position: relative;
    /* chrome behavior */
    z-index: 1;
    width: 100%;
    height: 6vw;
    margin-top: -3vw;
    -webkit-transform: skewY(-3deg);
    transform: skewY(-3deg);
    -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
    -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
    box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
}
/* ... */

